postcss/testData/inspections/nesting/nestedRuleInsideSupports.pcss
@supports (display: table-cell) and (display: list-item) {
  h1 {
    <error descr="Nested ruleset selector should start with '&'">div</error> {
      color: white;
    }

    @nest <error descr="Nested ruleset selector should contain '&'">div</error> {
      color: white;
    }

    & div {
      color: red;
    }

    @nest div & {
      color: red;
    }

    <error descr="Nested ruleset selector should start with '@nest'">div &</error> {
      color: red;
    }
  }
}

div {
  @media screen {
    @supports (display: table-cell) and (display: list-item) {
      h1 {
        <error descr="Nested ruleset selector should start with '&'">div</error> {
          color: white;
        }

        @nest <error descr="Nested ruleset selector should contain '&'">div</error> {
          color: white;
        }

        & div {
          color: red;
        }

        @nest div & {
          color: red;
        }
      }
    }
  }
}